--- a/caliber/src/main/webapp/static/app/partials/manage/import-batch-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/manage/import-batch-modal.html
@@ -25,8 +25,7 @@
 							</select>
 						</div>
 					</div>
-					<!-- <div ng-if="batchToImport "> -->
-					<div>
+					<div ng-if="batchToImport">
 						<div class="row">
 							<div class="form-group col-md-6 col-sm-6">
 								<label for="name">Training Name:</label> <span id="name">{{batchToImport.trainingName}}</span>
