--- a/caliber/src/main/webapp/static/app/partials/reports.html
+++ b/caliber/src/main/webapp/static/app/partials/reports.html
@@ -1,5 +1,4 @@
-<div class="bg-primary align center" ng-if="!currentBatch">No data available.</div>
-<div class="container" ng-if="currentBatch">
+<div class="container">
 	<div class="row">
 		<div class="col-md-12 col-lg-12">
 			<!-- Generate PDF of current page -->
@@ -20,7 +19,7 @@
 				</ul>
 			</div>
 
-			<ul class="nav nav-tabs" ng-show="!noBatches">
+			<ul class="nav nav-tabs">
 				<!-- Filter batches by year -->
 				<li role="button" class="dropdown"><a class="dropdown-toggle"
 					data-toggle="dropdown">{{selectedYear}}<span class="caret"></span></a>
@@ -29,7 +28,7 @@
 							role="button" ng-click="selectYear($index)">{{year}}</a></li>
 					</ul></li>
 				<!-- Select Batch-->
-				<li role="button" class="dropdown"><a class="dropdown-toggle"
+				<li role="button" class="dropdown" ng-show="hideOtherTabs()"><a class="dropdown-toggle"
 					data-toggle="dropdown">{{currentBatch.trainer.name}} - {{
 						currentBatch.startDate | date:'shortDate' }}<span class="caret"></span>
 				</a>
@@ -39,7 +38,7 @@
 								- {{batch.startDate | date:'shortDate'}}</a></li>
 					</ul></li>
 				<!-- Select Week-->
-				<li role="button" class="dropdown"><a class="dropdown-toggle"
+				<li role="button" class="dropdown" ng-show="hideOtherTabs()"><a class="dropdown-toggle"
 					data-toggle="dropdown">Week {{reportCurrentWeek}}<span
 						class="caret"></span>
 				</a>
@@ -89,6 +88,7 @@
 			</ul>
 		</div>
 	</div>
+	<div class="bg-primary align center" ng-if="!currentBatch">No data available for {{selectedYear}}.</div>
 </div>
 <!-- No Selected Batches -->
 <div ng-show="noBatches">
@@ -96,7 +96,7 @@
 </div>
 
 <!-- Charts -->
-<div id="caliber-container" class="container" ng-show="!noBatches">
+<div id="caliber-container" class="container" ng-if="currentBatch">
 	<div class="top10 data-container">
 
 		<!-- Batch -> Week -->
