--- a/caliber/src/main/webapp/static/app/partials/assess/trainer-assess.html
+++ b/caliber/src/main/webapp/static/app/partials/assess/trainer-assess.html
@@ -12,7 +12,7 @@
 						role="button" ng-click="selectYear($index)">{{menuItem}}</a></li>
 			</ul></li>
 	</div>
-	<div class="bg-primary align center">No data available.</div>
+	<div class="bg-primary align center">No data available for {{ selectedYear }}.</div>
 </div>
 <div class="container" ng-if="currentBatch">
 	<div class="row">
