--- a/caliber/src/main/webapp/static/app/partials/reports.html
+++ b/caliber/src/main/webapp/static/app/partials/reports.html
@@ -4,7 +4,7 @@
 		<div class="col-md-12 col-lg-12">
 			<!-- Generate PDF of current page -->
 			<div class="dropdown pull-right">
-				<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+				<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" name="randomNamePlease" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 					<span ng-hide="reticulatingSplines"> <i class="fa fa-file-pdf-o" aria-hidden="true"></i> </span>
 					<a href=""
 					   style="pointer-events: none; cursor: default;" title="Processing.."
