POM for ManagePage

--- a/caliber/src/main/webapp/static/app/partials/manage/view-trainees-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/manage/view-trainees-modal.html
@@ -80,7 +80,7 @@
 									<td>{{trainee.projectCompletion}}</td>
 
 
-									<td><a role="button"
+									<td><a role="button" name="traineePencil" id="traineePencilId"
 										ng-click="populateTrainee(trainee);getTrainee($index)"
 										data-toggle="modal" data-target="#addTraineeModal"
 										type="button"> <span class="glyphicon glyphicon-pencil"></span>
