--- a/caliber/src/main/webapp/static/app/partials/manage/manage-batch.html
+++ b/caliber/src/main/webapp/static/app/partials/manage/manage-batch.html
@@ -5,7 +5,7 @@
 				<ul class="nav nav-tabs">
 					<!-- Filter batches by year -->
 					<li role="button" class="dropdown"><a class="dropdown-toggle"
-						data-toggle="dropdown">{{selectedYear}}<span class="caret"></span></a>
+						data-toggle="dropdown"><label id="{{selectedYear}}">{{selectedYear}}</label><span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li ng-repeat="menuItem in years track by $index"><a
 								role="button" ng-click="selectYear($index)">{{menuItem}}</a></li>
