--- a/caliber/src/main/webapp/static/app/partials/assess/trainer-assess.html
+++ b/caliber/src/main/webapp/static/app/partials/assess/trainer-assess.html
@@ -1,20 +1,5 @@
 <!-- Year selector and Add Assessment button -->
-<div class="container" ng-if="!currentBatch">
-	<div>
-		<!-- top ui for viewing all assessments -->
-		<ul class="nav nav-tabs" ng-show="currentView">
-		<!-- top ui for viewing all assessments -->
-		<!-- Filter batches by year -->
-			<li role="button" class="dropdown"><a class="dropdown-toggle"
-				data-toggle="dropdown">{{selectedYear}}<span class="caret"></span></a>
-				<ul class="dropdown-menu">
-					<li ng-repeat="menuItem in years track by $index"><a
-						role="button" ng-click="selectYear($index)">{{menuItem}}</a></li>
-			</ul></li>
-	</div>
-	<div class="bg-primary align center">No data available for {{ selectedYear }}.</div>
-</div>
-<div class="container" ng-if="currentBatch">
+<div class="container">
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12" ng-show="!currentView">
 			<button class="btn back-btn" ng-click="back()">
@@ -33,7 +18,6 @@
 						<li ng-repeat="menuItem in years track by $index"><a
 							role="button" ng-click="selectYear($index)">{{menuItem}}</a></li>
 					</ul></li>
-
 				<li role="button" class="dropdown" ng-show="!noBatches"><a
 					class="dropdown-toggle" data-toggle="dropdown"> {{
 						currentBatch.trainer.name }} - {{ currentBatch.startDate |
@@ -84,6 +68,8 @@
 			</ul>
 		</div>
 	</div>
+	<!-- If no data display below text -->
+	<div class="bg-primary align center" ng-if="!currentBatch">No data available for {{ selectedYear }}.</div>
 </div>
 <!-- Assessments table -->
 <div class="container" id="trainer-assess-table" ng-if="currentBatch">
