--- a/caliber/src/main/webapp/static/app/partials/home/vp-home.html
+++ b/caliber/src/main/webapp/static/app/partials/home/vp-home.html
@@ -38,7 +38,6 @@
 								chart-options="stackedBarOptions" 
 								chart-labels="stackedBarLabels"
 								chart-series="stackedBarSeries" 
-
 								chart-colors="stackedBarColors"
 								chart-click="onClick">>
 							</canvas>
@@ -53,10 +52,10 @@
 												ng-repeat="series in stackedBarSeries">{{series}}</th>
 											<th class="col-sm-2 col-md-2 col-lg-2">Overall Batch Status</th>
 										</tr>
-										<tr ng-repeat="label in stackedBarLabels track by $index ">
+										<tr ng-repeat="label in stackedBarLabels">
 											<th class="col-sm-2 col-md-2 col-lg-2">{{label}}</th>
 											<td class="col-sm-2 col-md-2 col-lg-2"
-												ng-repeat="series in stackedBarSeries track by $index">{{stackedBarData[$index][$parent.$index]}}</td>
+												ng-repeat="series in stackedBarSeries">{{stackedBarData[$index][$parent.$index]}}</td>
 											<td class="overall-batch-health" ng-class="{'color-red': qcOverallNotes[$index] === 'Poor', 'color-yellow': qcOverallNotes[$index] === 'Average', 'color-green': qcOverallNotes[$index] === 'Good'}">{{qcOverallNotes[$index]}}</td>
 										</tr>
 									</tbody>
