--- a/caliber/src/main/webapp/static/app/partials/assess/trainer-edit-assess.html
+++ b/caliber/src/main/webapp/static/app/partials/assess/trainer-edit-assess.html
@@ -3,10 +3,10 @@
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
-				<button type="button" class="close" ng-click="closeModal('EditAssessmentModal_'+assessment.assessmentId)" aria-label="Close">
+				<button id="closeBtn" type="button" class="close" ng-click="closeModal('EditAssessmentModal_'+assessment.assessmentId)" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
-				<h4 class="modal-title" id="myModalLabel">Edit Assessment {{assessment.title}}</h4>
+				<h4 class="modal-title" id="createNewAssessmentId">Edit Assessment {{assessment.title}}</h4>
 			</div>
 			<!-- Add Assessment Info -->
 				<div class="modal-body">
@@ -17,7 +17,7 @@
 								ng-options="option.skillCategory for option in category.options" 
 								ng-model="updateAssessmentModel.category"
 								required
-							><option value="">{{assessment.category.skillCategory}}</option>
+							><option id="{{assessment.category.skillCategory" value="">{{assessment.category.skillCategory}}</option>
 							</select>
 						</div>
 						<div class="form-group col-md-6 col-sm-6" style="text-align: left">
@@ -29,7 +29,7 @@
 								ng-model="updateAssessmentModel.type" class="form-control"
 								id="assessmentType" required>
 								<option value="" disabled>{{assessment.type}}</option>
-								<option ng-repeat="option in assessmentType.options">{{option}}</option>
+								<option ng-repeat="option in assessmentType.options" id="{{option}}">{{option}}</option>
 							</select>
 						</div>						
 					</div>
@@ -41,8 +41,8 @@
 						aria-label="Delete">Delete</button>
 					</div>
 					<div style="text-align: right">
-						<input type="button" value="Update" class="btn btn-primary" ng-click="updateAssessment(assessment,$event,'EditAssessmentModal_'+assessment.assessmentId, $index)">
-						<button ng-click="closeModal('EditAssessmentModal_'+assessment.assessmentId)" type="button" class="btn"
+						<input id="updateBtn" type="button" value="Update" class="btn btn-primary" ng-click="updateAssessment(assessment,$event,'EditAssessmentModal_'+assessment.assessmentId, $index)">
+						<button id="closeModalBtn" ng-click="closeModal('EditAssessmentModal_'+assessment.assessmentId)" type="button" class="btn"
 						aria-label="Close">Close</button>
 					</div>
 				</div>
