--- a/caliber/src/main/webapp/static/app/partials/category/add-category-modals.html
+++ b/caliber/src/main/webapp/static/app/partials/category/add-category-modals.html
@@ -4,7 +4,7 @@
 		<div class="modal-dialog modal-lg" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal"
+					<button id="XBtn" type="button" class="close" data-dismiss="modal"
 						aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
@@ -24,9 +24,9 @@
 						</div>
 
 						<div class="modal-footer">
-							<input type="submit" ng-value="Save" class="btn btn-primary"
+							<input id="submitBtn" type="submit" ng-value="Save" class="btn btn-primary"
 						data-dismiss="modal" ng-click="saveCategory(categoryForm)">
-							<button type="button" class="btn btn-default"
+							<button id="closeBtn" type="button" class="btn btn-default"
 								data-dismiss="modal">Close</button>
 						</div>
 					</div>
