--- a/caliber/src/main/webapp/static/app/partials/locations/edit-location-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/locations/edit-location-modal.html
@@ -5,7 +5,7 @@
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal"
+					<button id="XBtn" type="button" class="close" data-dismiss="modal"
 						aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
@@ -42,57 +42,57 @@
 									ng-model="locationForm.state" class="form-control"
 									id="locationState" ng-required="true">
 									<option value="" disabled>Select State</option>
-									<option value="AL">Alabama</option>
-									<option value="AK">Alaska</option>
-									<option value="AZ">Arizona</option>
-									<option value="AR">Arkansas</option>
-									<option value="CA">California</option>
-									<option value="CO">Colorado</option>
-									<option value="CT">Connecticut</option>
-									<option value="DE">Delaware</option>
-									<option value="DC">District Of Columbia</option>
-									<option value="FL">Florida</option>
-									<option value="GA">Georgia</option>
-									<option value="HI">Hawaii</option>
-									<option value="ID">Idaho</option>
-									<option value="IL">Illinois</option>
-									<option value="IN">Indiana</option>
-									<option value="IA">Iowa</option>
-									<option value="KS">Kansas</option>
-									<option value="KY">Kentucky</option>
-									<option value="LA">Louisiana</option>
-									<option value="ME">Maine</option>
-									<option value="MD">Maryland</option>
-									<option value="MA">Massachusetts</option>
-									<option value="MI">Michigan</option>
-									<option value="MN">Minnesota</option>
-									<option value="MS">Mississippi</option>
-									<option value="MO">Missouri</option>
-									<option value="MT">Montana</option>
-									<option value="NE">Nebraska</option>
-									<option value="NV">Nevada</option>
-									<option value="NH">New Hampshire</option>
-									<option value="NJ">New Jersey</option>
-									<option value="NM">New Mexico</option>
-									<option value="NY">New York</option>
-									<option value="NC">North Carolina</option>
-									<option value="ND">North Dakota</option>
-									<option value="OH">Ohio</option>
-									<option value="OK">Oklahoma</option>
-									<option value="OR">Oregon</option>
-									<option value="PA">Pennsylvania</option>
-									<option value="RI">Rhode Island</option>
-									<option value="SC">South Carolina</option>
-									<option value="SD">South Dakota</option>
-									<option value="TN">Tennessee</option>
-									<option value="TX">Texas</option>
-									<option value="UT">Utah</option>
-									<option value="VT">Vermont</option>
-									<option value="VA">Virginia</option>
-									<option value="WA">Washington</option>
-									<option value="WV">West Virginia</option>
-									<option value="WI">Wisconsin</option>
-									<option value="WY">Wyoming</option>
+									<option id="AL" value="AL">Alabama</option>
+									<option id="AK" value="AK">Alaska</option>
+									<option id="AZ" value="AZ">Arizona</option>
+									<option id="AR" value="AR">Arkansas</option>
+									<option id="CA" value="CA">California</option>
+									<option id="CO" value="CO">Colorado</option>
+									<option id="CT" value="CT">Connecticut</option>
+									<option id="DE" value="DE">Delaware</option>
+									<option id="DC" value="DC">District Of Columbia</option>
+									<option id="FL" value="FL">Florida</option>
+									<option id="GA" value="GA">Georgia</option>
+									<option id="HI" value="HI">Hawaii</option>
+									<option id="ID" value="ID">Idaho</option>
+									<option id="IL" value="IL">Illinois</option>
+									<option id="IN" value="IN">Indiana</option>
+									<option id="IA" value="IA">Iowa</option>
+									<option id="KS" value="KS">Kansas</option>
+									<option id="KY" value="KY">Kentucky</option>
+									<option id="LA" value="LA">Louisiana</option>
+									<option id="ME" value="ME">Maine</option>
+									<option id="MD" value="MD">Maryland</option>
+									<option id="MA" value="MA">Massachusetts</option>
+									<option id="MI" value="MI">Michigan</option>
+									<option id="MN" value="MN">Minnesota</option>
+									<option id="MS" value="MS">Mississippi</option>
+									<option id="MO" value="MO">Missouri</option>
+									<option id="MT" value="MT">Montana</option>
+									<option id="NE" value="NE">Nebraska</option>
+									<option id="NV" value="NV">Nevada</option>
+									<option id="NH" value="NH">New Hampshire</option>
+									<option id="NJ" value="NJ">New Jersey</option>
+									<option id="NM" value="NM">New Mexico</option>
+									<option id="NY" value="NY">New York</option>
+									<option id="NC" value="NC">North Carolina</option>
+									<option id="ND" value="ND">North Dakota</option>
+									<option id="OH" value="OH">Ohio</option>
+									<option id="OK" value="OK">Oklahoma</option>
+									<option id="OR" value="OR">Oregon</option>
+									<option id="PA" value="PA">Pennsylvania</option>
+									<option id="RI" value="RI">Rhode Island</option>
+									<option id="SC" value="SC">South Carolina</option>
+									<option id="SD" value="SD">South Dakota</option>
+									<option id="TN" value="TN">Tennessee</option>
+									<option id="TX" value="TX">Texas</option>
+									<option id="UT" value="UT">Utah</option>
+									<option id="VT" value="VT">Vermont</option>
+									<option id="VA" value="VA">Virginia</option>
+									<option id="WA" value="WA">Washington</option>
+									<option id="WV" value="WV">West Virginia</option>
+									<option id="WI" value="WI">Wisconsin</option>
+									<option id="WY" value="WY">Wyoming</option>
 								</select>
 							</div>
 						</div>
@@ -110,9 +110,9 @@
 
 					</div>
 					<div class="modal-footer">
-					<input type="submit" ng-value="Save" class="btn btn-primary"
+					<input id="submitBtn" type="submit" ng-value="Save" class="btn btn-primary"
 						data-dismiss="modal" ng-click="updateLocation()">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button> 
+					<button id="closeBtn" type="button" class="btn btn-default" data-dismiss="modal">Close</button> 
 
 				</div>
 
