--- a/caliber/src/main/webapp/static/app/partials/locations/manage-locations.html
+++ b/caliber/src/main/webapp/static/app/partials/locations/manage-locations.html
@@ -4,7 +4,7 @@
 			<div class="col-md-12 col-lg-12">
 				<ul class="nav nav-tabs">
 					<li role="button" class="pull-right" data-toggle="modal"
-						data-target="#createLocationModal" ng-click="resetLocationForm()"><a>Create
+						data-target="#createLocationModal" ng-click="resetLocationForm()"><a id="createLocationBtn" >Create
 							Location <span class="glyphicon glyphicon-plus"
 							aria-hidden="true"></span>
 					</a></li>
