--- a/caliber/src/main/webapp/static/app/partials/trainers/manage-trainers.html
+++ b/caliber/src/main/webapp/static/app/partials/trainers/manage-trainers.html
@@ -4,7 +4,7 @@
 			<div class="col-md-12 col-lg-12">
 				<ul class="nav nav-tabs">
 					<li role="button" class="pull-right" data-toggle="modal"
-						data-target="#createTrainerModal" ng-click="resetTrainerForm()"><a>Create
+						data-target="#createTrainerModal" ng-click="resetTrainerForm()"><a id="createTrainerBtn">Create
 							Trainer <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 					</a></li>
 
@@ -35,11 +35,11 @@
 							<td>{{trainer.email}}</td>
 							<td>{{trainer.tier.substr(5)}}</td>
 							<!-- Buttons -->
-							<td><a role="button" class="pull-right"
+							<td><a id="pencilIcon" role="button" class="pull-right"
 								ng-click="populateTrainer($index)" data-toggle="modal"
 								data-target="#editTrainerModal"><span
 									class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
-							<td><a role="button" class="pull-right"
+							<td><a id="deleteIcon" role="button" class="pull-right"
 								ng-click="populateTrainer($index)" data-toggle="modal"
 								data-target="#deleteTrainerModal"><span
 									class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></td>
