--- a/caliber/src/main/webapp/static/app/partials/manage/edit-batch-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/manage/edit-batch-modal.html
@@ -116,8 +116,8 @@
 					</div>
 				</div>
 				<div class="modal-footer">
-					<input type="submit" ng-value="Save" class="btn btn-primary">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					<input id = "saveEditBatchButton" type="submit" ng-value="Save" class="btn btn-primary">
+					<button id = "closeEditBatchButton" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 				</div>
 			</div>
 		</div>
