--- a/caliber/src/main/webapp/static/app/partials/manage/trainee-axillary-modals.html
+++ b/caliber/src/main/webapp/static/app/partials/manage/trainee-axillary-modals.html
@@ -41,8 +41,8 @@
 					<br />
 				</div>
 				<div class="modal-footer">
-					<input type="submit" value="Delete" class="btn btn-lg btn-danger">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+					<input  id="deleteTraineeButton" type="submit" value="Delete" class="btn btn-lg btn-danger">
+					<button id="CancelTraineeButton" type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
 				</div>
 			</div>
 		</div>
