--- a/caliber/src/main/webapp/static/app/partials/manage/manage-batch.html
+++ b/caliber/src/main/webapp/static/app/partials/manage/manage-batch.html
@@ -12,13 +12,13 @@
 						</ul></li>
 					<!-- Button Trigger for Import Batch Modal -->
 					<li role="button" class="pull-right" data-toggle="modal"
-						data-target="#importBatchModal" ng-click="resetImportModal()"><a>Import 
+						data-target="#importBatchModal" ng-click="resetImportModal()"><a id= "importTab">Import 
 							Batch <span class="glyphicon glyphicon-download" aria-hidden="true">	
 						</span>
 					</a></li>
 					<!-- Button Trigger for Create Batch Modal -->
 					<li role="button" class="pull-right" data-toggle="modal"
-						data-target="#createBatchModal" ng-click="resetBatchForm()"><a>Create
+						data-target="#createBatchModal" ng-click="resetBatchForm()"><a id= "createBatchTab">Create
 							Batch<span class="glyphicon glyphicon-plus" aria-hidden="true">
 						</span>
 					</a></li>
@@ -61,18 +61,18 @@
 							<td>{{batch.goodGradeThreshold}}</td>
 							<td>{{batch.borderlineGradeThreshold}}</td>
 							<td>
-								<!-- Button Trigger for Add Trainee Modal --> <a role="button"
+								<!-- Button Trigger for Add Trainee Modal --> <a id= "view/addTrainees{{$index}}" role="button"
 								data-toggle="modal"
 								ng-click="resetTraineeForm();selectCurrentBatch($index)"
 								data-target="#viewTraineeModal"><span
 									class="glyphicon glyphicon-user"><p align="center">{{batch.trainees.length}}</p></span>
 							</a>
 							</td>
-							<td><a role="button" class="pull-right"
+							<td><a  id="updateBatch{{$index}}" role="button" class="pull-right"
 								ng-click="populateBatch(batch);selectCurrentBatch($index)"
 								data-toggle="modal" data-target="#createBatchModal"><span
 									class="glyphicon glyphicon-pencil" aria-hidden="true"> </span></a></td>
-							<td><a role="button" class="pull-right"
+							<td><a id="removeBatch{{$index}}" role="button" class="pull-right"
 								ng-click="selectCurrentBatch($index)" data-toggle="modal"
 								data-target="#deleteBatchModal"><span
 									class="glyphicon glyphicon-remove" aria-hidden="true"> </span></a></td>
