html id's added to qc-assess, qc-modal

--- a/caliber/src/main/webapp/static/app/partials/assess/confirm-add-weeks-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/assess/confirm-add-weeks-modal.html
@@ -11,7 +11,7 @@
 			<div class="modal-footer">
 				<button id="yesBtn" type="button" class="btn btn-primary"
 					ng-click="createWeek()" data-dismiss="modal">Yes</button>
-				<button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+				<button id="noBtn" type="button" class="btn btn-default" data-dismiss="modal">No</button>
 			</div>
 		</div>
 	</div>
