fixed settings html id

--- a/caliber/src/main/webapp/static/app/partials/abstracts/vp.html
+++ b/caliber/src/main/webapp/static/app/partials/abstracts/vp.html
@@ -11,9 +11,9 @@
 			<li><a id = "managePage" ui-sref="vp.manage">Manage Batch</a></li>
 			<li><a id = "assessPage" ui-sref="vp.assess">Assess Batch</a></li>
 			<li><a id = "qualityAuditPage" ui-sref="vp.audit">Quality Audit</a></li>
-			<li><a id = "reports page" ui-sref="vp.reports">Reports</a></li>
-			<li id = "settingDropdown" role="presentation" class="dropdown"><a
-				class="dropdown-toggle" data-toggle="dropdown" role="button"
+			<li><a id = "reportsPage" ui-sref="vp.reports">Reports</a></li>
+			<li role="presentation" class="dropdown"><a
+				class="dropdown-toggle" data-toggle="dropdown" role="button" id="settingsDropDown"
 				aria-haspopup="true" aria-expanded="false">Settings<span
 					class="caret"></span></a>
 				<ul class="dropdown-menu">
