altered for Headless chrome

--- a/caliber/src/main/webapp/static/app/partials/abstracts/staging.html
+++ b/caliber/src/main/webapp/static/app/partials/abstracts/staging.html
@@ -9,8 +9,8 @@
             </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li><a ui-sref="staging.home">Home</a></li>
-            <li><a ui-sref="staging.reports">Reports</a></li>
+            <li><a id="home" ui-sref="staging.home">Home</a></li>
+            <li><a id="reports" ui-sref="staging.reports">Reports</a></li>
         </ul>
     </div>
 </nav>
