--- a/caliber/src/main/webapp/static/app/partials/abstracts/vp.html
+++ b/caliber/src/main/webapp/static/app/partials/abstracts/vp.html
@@ -7,19 +7,19 @@
 			</a></li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
-			<li><a ui-sref="vp.home">Home</a></li>
-			<li><a ui-sref="vp.manage">Manage Batch</a></li>
-			<li><a ui-sref="vp.assess">Assess Batch</a></li>
-			<li><a ui-sref="vp.audit">Quality Audit</a></li>
-			<li><a ui-sref="vp.reports">Reports</a></li>
+			<li><a id="home" ui-sref="vp.home">Home</a></li>
+			<li><a id="manage" ui-sref="vp.manage">Manage Batch</a></li>
+			<li><a id="assess" ui-sref="vp.assess">Assess Batch</a></li>
+			<li><a id="audit" ui-sref="vp.audit">Quality Audit</a></li>
+			<li><a id="reports" ui-sref="vp.reports">Reports</a></li>
 			<li role="presentation" class="dropdown"><a
-				class="dropdown-toggle" data-toggle="dropdown" role="button"
+				class="dropdown-toggle" id="settings" data-toggle="dropdown" role="button"
 				aria-haspopup="true" aria-expanded="false">Settings<span
 					class="caret"></span></a>
 				<ul class="dropdown-menu">
-					<li><a ui-sref="vp.trainers">Trainers</a></li>
-					<li><a ui-sref="vp.locations">Locations</a></li> 
-					<li><a ui-sref="vp.category">Category</a></li>
+					<li><a id="trainers" ui-sref="vp.trainers">Trainers</a></li>
+					<li><a id="locations" ui-sref="vp.locations">Locations</a></li> 
+					<li><a id="category" ui-sref="vp.category">Category</a></li>
 				</ul></li>
 			<!-- <li><a href="/revoke" target="_self">Logout</a></li> -->
 		</ul>
