--- a/caliber/src/main/webapp/static/app/partials/abstracts/qc.html
+++ b/caliber/src/main/webapp/static/app/partials/abstracts/qc.html
@@ -7,10 +7,10 @@
 			</a></li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
-			<li><a ui-sref="qc.home">Home</a></li>
-			<li><a ui-sref="qc.manage">Manage Batch</a></li>
-			<li><a ui-sref="qc.audit">Quality Audit</a></li>
-			<li><a ui-sref="qc.reports">Reports</a></li>
+			<li><a id="home" ui-sref="qc.home">Home</a></li>
+			<li><a id="manage" ui-sref="qc.manage">Manage Batch</a></li>
+			<li><a id="audit" ui-sref="qc.audit">Quality Audit</a></li>
+			<li><a id="reports" ui-sref="qc.reports">Reports</a></li>
 			<!-- <li><a href="/revoke" target="_self">Logout</a></li> -->
 		</ul>
 	</div>
