--- a/caliber/src/main/webapp/static/app/partials/abstracts/trainer.html
+++ b/caliber/src/main/webapp/static/app/partials/abstracts/trainer.html
@@ -7,10 +7,10 @@
 			</a></li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
-			<li><a ui-sref="trainer.home">Home</a></li>
-			<li><a ui-sref="trainer.manage">Manage Batch</a></li>
-			<li><a ui-sref="trainer.assess">Assess Batch</a></li>
-			<li><a ui-sref="trainer.reports">Reports</a></li>
+			<li><a id="home" ui-sref="trainer.home">Home</a></li>
+			<li><a id="manage" ui-sref="trainer.manage">Manage Batch</a></li>
+			<li><a id="assess" ui-sref="trainer.assess">Assess Batch</a></li>
+			<li><a id = "reports" ui-sref="trainer.reports">Reports</a></li>
 			<!-- <li><a href="/revoke" target="_self">Logout</a></li> -->
 		</ul>
 	</div>
