Refactored Manage Batch POM

--- a/caliber/src/main/webapp/static/app/partials/manage/edit-trainee-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/manage/edit-trainee-modal.html
@@ -6,7 +6,7 @@
 		<div class="modal-dialog modal-lg" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal"
+					<button id="XBtn" type="button" class="close" data-dismiss="modal"
 						aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
@@ -128,9 +128,9 @@
 					</div>
 					<div class="modal-footer">
 						<input id = "saveButton" type="submit" value="Save" class="btn btn-primary" ng-show="!Updating.status"/>
-						<button type="button" class="btn btn-default" data-dismiss="modal"
+						<button id="cancelButton" type="button" class="btn btn-default" data-dismiss="modal"
 							ng-show="!Updating.status">Close</button>
-						<input id = "updateButton" type="submit" value="Update" class="btn btn-primary"
+						<input id = "saveButton" type="submit" value="Update" class="btn btn-primary"
 							ng-show="Updating.status" )>
 						<button id = "cancelButton" type="button" class="btn btn-default" data-dismiss="modal"
 							ng-show="Updating.status">Cancel</button>
