--- a/caliber/src/main/webapp/static/app/partials/manage/view-trainees-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/manage/view-trainees-modal.html
@@ -22,7 +22,7 @@
 						<span>Active&nbsp</span> <a id = "active" role="button"
 							ng-click="switchTraineeView()" ng-show="!showdropped"><span
 							class="fa fa-toggle-on fa-2x" aria-hidden="true"> </span></a> <a
-							role="button" ng-click="switchTraineeView()"
+							id="inActive" role="button" ng-click="switchTraineeView()"
 							ng-show="showdropped"><span class="fa fa-toggle-off fa-2x"
 							aria-hidden="true"> </span></a>
 					</div>
