--- a/caliber/src/main/webapp/static/app/partials/manage/batch-axillary-modals.html
+++ b/caliber/src/main/webapp/static/app/partials/manage/batch-axillary-modals.html
@@ -5,7 +5,7 @@
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal"
+					<button id="XBtn" type="button" class="close" data-dismiss="modal"
 						aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
