--- a/caliber/src/main/webapp/static/app/partials/trainers/manage-trainers.html
+++ b/caliber/src/main/webapp/static/app/partials/trainers/manage-trainers.html
@@ -35,11 +35,11 @@
 							<td>{{trainer.email}}</td>
 							<td>{{trainer.tier.substr(5)}}</td>
 							<!-- Buttons -->
-							<td><a id="pencilIcon" role="button" class="pull-right"
+							<td><a id="pencilIcon{{$index}}" role="button" class="pull-right"
 								ng-click="populateTrainer($index)" data-toggle="modal"
 								data-target="#editTrainerModal"><span
 									class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
-							<td><a id="deleteIcon" role="button" class="pull-right"
+							<td><a id="deleteIcon{{$index}}" role="button" class="pull-right"
 								ng-click="populateTrainer($index)" data-toggle="modal"
 								data-target="#deleteTrainerModal"><span
 									class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></td>
