--- a/caliber/src/main/webapp/static/app/partials/reports.html
+++ b/caliber/src/main/webapp/static/app/partials/reports.html
@@ -49,8 +49,8 @@
 					</ul></li>
 
 				<!-- Select Trainee-->
-				<li role="button" class="dropdown"><a class="dropdown-toggle"
-					ng-show="hideOtherTabs()" data-toggle="dropdown">{{currentTrainee.name}}<span
+				<li role="button" class="dropdown" ng-show="hideOtherTabs()"><a class="dropdown-toggle"
+					 data-toggle="dropdown">{{currentTrainee.name}}<span
 						class="caret"></span></a>
 					<ul class="dropdown-menu">
 						<li><a role="button" ng-click="selectCurrentTrainee(-1)">All</a></li>
