--- a/caliber/src/main/webapp/static/app/partials/reports.html
+++ b/caliber/src/main/webapp/static/app/partials/reports.html
@@ -49,7 +49,7 @@
 					</ul></li>
 
 				<!-- Select Trainee-->
-				<li role="button" class="dropdown"><a class="dropdown-toggle" ng-show="hideOtherTabs()" 
+				<li role="button" ng-show="hideOtherTabs()"  class="dropdown"><a class="dropdown-toggle" 
 					data-toggle="dropdown">{{currentTrainee.name}}<span
 						class="caret"></span></a>
 					<ul class="dropdown-menu">
