assert exam method

--- a/caliber/src/main/webapp/static/app/partials/assess/trainer-assess.html
+++ b/caliber/src/main/webapp/static/app/partials/assess/trainer-assess.html
@@ -101,7 +101,7 @@
 							<tr sticky class='sticky-header'>
 								<th class="col-sm-2 col-md-2 col-lg-2">Trainee</th>
 								<div>
-									<th class="col-sm-1 col-md-1 col-lg-1 text-center"
+									<th id="{{assessment.category.skillCategory}}Exam" class="col-sm-1 col-md-1 col-lg-1 text-center"
 										role="button" data-toggle="modal"
 										data-target="#editAssessmentModal_{{assessment.assessmentId}}"
 										ng-repeat="assessment in currentAssessments track by $index">
