--- a/caliber/src/main/webapp/static/app/partials/manage/view-trainees-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/manage/view-trainees-modal.html
@@ -63,7 +63,7 @@
 							</thead>
 							<tbody>
 								<tr ng-repeat="trainee in trainees">
-									<td>{{trainee.name}}</td>
+									<td id="{{trainee.name}}">{{trainee.name}}</td>
 									<td>{{trainee.email}}</td>
 									<td>{{trainee.trainingStatus}}</td>
 									<td>{{trainee.phoneNumber}}</td>
